// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.runtime.kubernetes.kubedef;

option go_package = "namespacelabs.dev/foundation/runtime/kubernetes/kubedef";

message SystemInfo {
    repeated string node_platform         = 1;
    string          detected_distribution = 2;  // k3d, eks, etc.

    string eks_cluster_name = 3;  // Only set if distribution is eks.

    repeated string regions = 4;  // See region_distribution for details.
    repeated string zones   = 5;  // Set zone_distribution for details.

    repeated NodeDistribution region_distribution = 6;
    repeated NodeDistribution zone_distribution   = 7;
}

message NodeDistribution {
    string location = 1;
    int32  count    = 2;
}
